fix(core): correct text alignment in multipline buttons (fixes #534)

--- a/core/src/components/cat-button/cat-button.scss
+++ b/core/src/components/cat-button/cat-button.scss
@@ -343,10 +343,12 @@ $button-sizes: (
 
 :host(.cat-text-left) .cat-button {
   justify-content: left;
+  text-align: left;
 }
 
 :host(.cat-text-right) .cat-button {
   justify-content: right;
+  text-align: right;
 }
 
 // ----- navigation
